# RES-Network

./: .gitignore
doc/: listing_display_hardware.txt  План.txt
doc/Type1/Hardware/stm32/: Device.ioc
doc/ГТЦ-3/: .mxproject  Device.ioc  План.txt  Функции ГТЦ.docx
doc/ГТЦ-3/Core/Inc/: stm32f3xx_hal_conf.h
doc/ГТЦ-3/Core/Src/: main.c  stm32f3xx_hal_msp.c
doc/ГТЦ-3/MDK-ARM/: Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
doc/ГТЦ-3/MDK-ARM/RTE/_Device/: RTE_Components.h
doc/ГТЦ-3/_old/: Device.ioc
sources/: Network.uvmpw  Network.uvmpw.uvgui.Sasha
sources/Device/: CMakeLists.txt  Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
sources/Device/src/: Device.cpp  Message.h  main.cpp
sources/Device/src/Display/: Display.cpp  Display.h
sources/Device/src/Hardware/CDC/: usbd_conf.c
sources/Device/src/Hardware/CMSIS/: startup_stm32f103xb.s
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_CONF.h  HAL_RTC.cpp
sources/Device/src/Menu/: Menu.h
sources/Device/src/Modules/GY511/: GY511.cpp  GY511.h
sources/GTC/: CMakeLists.txt  GTC.uvguix.Sasha  GTC.uvoptx
sources/GTC-3/: CMakeLists.txt  GTC-3.uvguix.Sasha  GTC-3.uvoptx  GTC-3.uvprojx
sources/GTC-3/src/: Device.cpp
sources/GTC-3/src/Display/: Display.cpp  Display.h  StartScreen.cpp
sources/GTC-3/src/Hardware/: InterCom.cpp
sources/GTC-3/src/Hardware/CDC/: CDC.cpp  usbd_cdc_interface.c  usbd_cdc_interface.cpp  usbd_cdc_interface.h  usbd_conf.c  usbd_conf.cpp  usbd_conf.h
sources/GTC-3/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC.cpp  HAL_CONF.h  HAL_IT.cpp  HAL_PINS.cpp  HAL_PINS.h
sources/GTC-3/src/Modules/HIH4000/: HIH4000.cpp  HIH4000.h
sources/GTC-3/src/Settings/: Settings.h
sources/GTC/src/: Device.cpp  Log.h  defines.h  main.cpp
sources/GTC/src/Display/: Colors.cpp  Colors.h  Zones.cpp  Zones.h
sources/GTC/src/Display/Font/: Font.cpp  Font.h  font12_10.inc  font8.inc
sources/GTC/src/Hardware/: InterCom.cpp  InterCom.h  Keyboard.cpp  Keyboard.h  Timer.cpp  Timer.h
sources/GTC/src/Hardware/CDC/: CDC.cpp  CDC.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
sources/GTC/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_I2C.cpp  HAL_IT.cpp  HAL_RTC.cpp
sources/GTC/src/Menu/: Menu.cpp  MenuItems.cpp  MenuItems.h  MenuItemsDefs.h
sources/GTC/src/Menu/Pages/: PageDisplay.cpp  PageHC12.cpp  PageSystem.cpp  Pages.cpp  Pages.h
sources/GTC/src/Modules/BH1750/: BH1750.cpp  BH1750.h
sources/GTC/src/Modules/BME280/: BME280.cpp  BME280.h  bme280_defs.h  bme280_driver.c
sources/GTC/src/Modules/CG-Anem/: CG-Anem.cpp  CG-Anem.h
sources/GTC/src/Modules/GY511/: GY511.cpp  GY511.h
sources/GTC/src/Modules/HC12/: HC12.cpp  HC12.h
sources/GTC/src/Modules/ST7735/: ST7735.cpp  ST7735.h
sources/GTC/src/Settings/: Settings.cpp  Settings.h
sources/GTC/src/Utils/: Buffer.h  Math.cpp  Math.h  Values.cpp  Values.h
sources/GTC/src/Utils/Text/: String.cpp  String.h  Text.cpp  Text.h
sources/MS-1/: MS-1.uvoptx  MS-1.uvprojx
sources/MS-1/src/: Device.cpp
sources/MS-1/src/Hardware/HAL/: HAL.cpp  HAL_PINS.cpp  HAL_PINS.h
sources/MS-1/src/Modules/HC12/: HC12.cpp
sources/MS-1/src/Modules/NEO-M8N/: NEO-M8N.cpp
sources/TwoSensors/: TwoSensors.uvguix.Sasha
sources/VS/GTC-3/: CMakeLists.txt
sources/VS/GTC-3/Hardware/HAL/: HAL_ADC_win.cpp  stm32f3xx_hal_conf_gui.cpp  stm32f3xx_hal_conf_gui.h
sources/common/_VS_KEIL/std_includes/: cstring  math.h  stdlib.h
sources/fonts/: Font12_10.sgfnt
